Fixes #825, fixes #826, eliminates some flaws of #816, #821